change language in login and register page

--- a/FrontEnd/src/app/module/auth/login/login.component.html
+++ b/FrontEnd/src/app/module/auth/login/login.component.html
@@ -38,7 +38,7 @@
 							id="formEmail"
 							class="form-control form-control-lg"
 							name="username"
-							placeholder="Nhập username của chế vào đây"
+							placeholder="Input your username"
 							formControlName="username" />
 					</div>
 
@@ -71,12 +71,13 @@
 							(click)="onSubmit()"
 							class="btn btn-primary btn-lg"
 							style="padding-left: 2.5rem; padding-right: 2.5rem">
-							Đăng nhập
+							Login
 						</button>
 						<p class="small fw-bold mt-2 pt-1 mb-0">
-							Bạn chưa có tài khoản?
+							Do you don't have an account?
 							<a href="/auth/register" class="link-danger"
-								>Đăng ký tài khoản</a
+								>Sign up for an account</a
+							>
 							>
 						</p>
 					</div>
