--- a/FRONTEND/src/app/module/interview/interview-start/question-transfer/question-transfer.component.html
+++ b/FRONTEND/src/app/module/interview/interview-start/question-transfer/question-transfer.component.html
@@ -58,7 +58,9 @@
 										type="number"
 										[(ngModel)]="question.score"
 										(change)="onScoreChange()"
-										name="score{{ i }}" />
+										name="score{{ i }}"
+										min="0"
+										max="10" />
 								</mat-form-field>
 							</td>
 							<td>
