--- a/FRONTEND/src/app/module/reccer/interview/interview.component.html
+++ b/FRONTEND/src/app/module/reccer/interview/interview.component.html
@@ -6,9 +6,7 @@
 		</div>
 	</div>
 	<div class="row" style="height: fit-content">
-		<div
-			class="col-lg-3 p-2 rounded-2 mt-4"
-			style="
+		<div class="col-lg-3 p-2 rounded-2 mt-4" style="
 				height: fit-content;
 				border: green solid 1px;
 				background: linear-gradient(to right, #1732c8, #f32929);
@@ -16,24 +14,17 @@
 			<form class="p-4 w-100" [formGroup]="this.filterForm">
 				<mat-form-field class="w-100">
 					<mat-label>Search</mat-label>
-					<input
-						matInput
-						type="text"
-						formControlName="search"
-						placeholder="User name" />
+					<input matInput type="text" formControlName="search" placeholder="User name" />
 				</mat-form-field>
 
-				<section
-					class="w-100"
-					style="
+				<section class="w-100" style="
 						background-color: #ffffff;
 						border-top-left-radius: 0.25rem;
 						border-top-right-radius: 0.25rem;
 					">
 					<p class="p-3">
 						<mat-slide-toggle formControlName="onlyMine">
-							Only Mine</mat-slide-toggle
-						>
+							Only Mine</mat-slide-toggle>
 					</p>
 				</section>
 
@@ -42,46 +33,25 @@
 					<mat-select formControlName="sortString">
 						<mat-option value="MeetingDate_DESC">Newest</mat-option>
 						<mat-option value="MeetingDate_ASC">Oldest</mat-option>
-						<mat-option value="CandidateName_ASC"
-							>Candidate Name A->Z</mat-option
-						>
-						<mat-option value="CandidateName_DESC"
-							>Candidate Name Z->A</mat-option
-						>
-						<mat-option value="RecruiterName_ASC"
-							>Recruiter Name A->Z</mat-option
-						>
-						<mat-option value="RecruiterName_DESC"
-							>Recruiter Name Z->A</mat-option
-						>
-						<mat-option value="InterviewerName_ASC"
-							>Interviewer Name A->Z</mat-option
-						>
-						<mat-option value="InterviewerName_DESC"
-							>Interviewer Name Z->A</mat-option
-						>
+						<mat-option value="CandidateName_ASC">Candidate Name A->Z</mat-option>
+						<mat-option value="CandidateName_DESC">Candidate Name Z->A</mat-option>
+						<mat-option value="RecruiterName_ASC">Recruiter Name A->Z</mat-option>
+						<mat-option value="RecruiterName_DESC">Recruiter Name Z->A</mat-option>
+						<mat-option value="InterviewerName_ASC">Interviewer Name A->Z</mat-option>
+						<mat-option value="InterviewerName_DESC">Interviewer Name Z->A</mat-option>
 					</mat-select>
 				</mat-form-field>
 
-				<app-autocomplete
-					[formField]="'positionId'"
-					[valueField]="'positionId'"
-					[labelField]="'positionName'"
-					[placeholder]="'Please select'"
-					[label]="'Position'"
-					[observableOptions]="this.positionData$"
+				<app-autocomplete [formField]="'positionId'" [valueField]="'positionId'" [labelField]="'positionName'"
+					[placeholder]="'Please select'" [label]="'Position'" [observableOptions]="this.positionData$"
 					[formGroup]="this.filterForm"></app-autocomplete>
 
 				<mat-form-field class="w-100">
 					<mat-label>Type</mat-label>
 					<mat-select formControlName="interviewType">
 						<mat-option [value]="null"></mat-option>
-						<mat-option [value]="this.interview_Type.FACE2FACE"
-							>FACE TO FACE</mat-option
-						>
-						<mat-option [value]="this.interview_Type.ONLINE_GG_MEET"
-							>ONLINE BY GG MEET</mat-option
-						>
+						<mat-option [value]="this.interview_Type.FACE2FACE">FACE TO FACE</mat-option>
+						<mat-option [value]="this.interview_Type.ONLINE_GG_MEET">ONLINE BY GG MEET</mat-option>
 					</mat-select>
 				</mat-form-field>
 
@@ -89,90 +59,51 @@
 					<mat-label>Status</mat-label>
 					<mat-select formControlName="companyStatus">
 						<mat-option value=""></mat-option>
-						<mat-option
-							style="color: darkgoldenrod"
-							value="{{ this.interview_CompanyStatus.PENDING }}"
-							>PENDING</mat-option
-						>
-						<mat-option
-							style="color: rgb(48, 184, 141)"
-							value="{{ this.interview_CompanyStatus.FINISHED }}"
-							>FINISHED</mat-option
-						>
-						<mat-option
-							style="color: darkgreen"
-							value="{{ this.interview_CompanyStatus.PASSED }}"
-							>PASSED</mat-option
-						>
-						<mat-option
-							style="color: darkgreen"
-							value="{{
+						<mat-option style="color: darkgoldenrod"
+							value="{{ this.interview_CompanyStatus.PENDING }}">PENDING</mat-option>
+						<mat-option style="color: rgb(48, 184, 141)"
+							value="{{ this.interview_CompanyStatus.FINISHED }}">FINISHED</mat-option>
+						<mat-option style="color: darkgreen"
+							value="{{ this.interview_CompanyStatus.PASSED }}">PASSED</mat-option>
+						<mat-option style="color: darkgreen" value="{{
 								this.interview_CompanyStatus.PASSED_N_MAILED
-							}}"
-							>PASSED AND MAILED</mat-option
-						>
-						<mat-option
-							style="color: darkred"
-							value="{{ this.interview_CompanyStatus.FAILED }}"
-							>FAILED</mat-option
-						>
+							}}">PASSED AND MAILED</mat-option>
+						<mat-option style="color: darkred"
+							value="{{ this.interview_CompanyStatus.FAILED }}">FAILED</mat-option>
 					</mat-select>
 				</mat-form-field>
 
 				<div class="row">
 					<mat-form-field class="col-6">
 						<mat-label>From time</mat-label>
-						<input
-							matInput
-							type="time"
-							placeholder="From time"
-							formControlName="fromTime" />
+						<input matInput type="time" placeholder="From time" formControlName="fromTime" />
 					</mat-form-field>
 					<mat-form-field class="col-6">
 						<mat-label>To time</mat-label>
-						<input
-							matInput
-							type="time"
-							placeholder="To time"
-							formControlName="toTime" />
+						<input matInput type="time" placeholder="To time" formControlName="toTime" />
 					</mat-form-field>
 				</div>
 
 				<mat-form-field class="w-100">
 					<mat-label>Date</mat-label>
 					<mat-date-range-input [rangePicker]="picker">
-						<input
-							matStartDate
-							oninput="this.value=this.value.replace(/[^0-9\/]/g,'')"
-							formControlName="fromDate"
-							placeholder="From date"
-							#fromDatePicker />
-						<input
-							matEndDate
-							oninput="this.value=this.value.replace(/[^0-9\/]/g,'')"
-							formControlName="toDate"
-							placeholder="To date"
-							#toDatePicker />
+						<input matStartDate oninput="this.value=this.value.replace(/[^0-9\/]/g,'')"
+							formControlName="fromDate" placeholder="From date" #fromDatePicker />
+						<input matEndDate oninput="this.value=this.value.replace(/[^0-9\/]/g,'')"
+							formControlName="toDate" placeholder="To date" #toDatePicker />
 					</mat-date-range-input>
 					@if( fromDatePicker.value || toDatePicker.value){
-					<button
-						(click)="
+					<button (click)="
 							fromDatePicker.value = '';
 							toDatePicker.value = '';
 							this.filterForm.get('fromDate')?.setValue(null);
 							this.filterForm.get('toDate')?.setValue(null)
-						"
-						mat-icon-button>
+						" mat-icon-button>
 						<mat-icon style="color: red">delete</mat-icon>
 					</button>
 					}
-					<mat-hint
-						style="font-size: 13px; font-weight: 500; color: white"
-						>DD/MM/YYYY – DD/MM/YYYY</mat-hint
-					>
-					<mat-datepicker-toggle
-						matIconSuffix
-						[for]="picker"></mat-datepicker-toggle>
+					<mat-hint style="font-size: 13px; font-weight: 500; color: white">DD/MM/YYYY – DD/MM/YYYY</mat-hint>
+					<mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
 					<mat-date-range-picker #picker></mat-date-range-picker>
 				</mat-form-field>
 			</form>
@@ -180,30 +111,22 @@
 		<div class="col-lg-9 p-2 rounded-1">
 			<div class="mt-3 mb-3 d-flex flex-row">
 				<div (click)="this.openAddFormDialog('100ms', '0ms')">
-					<app-expandbutton
-						notExpandedWidth="50px"
-						color="primary"
-						expandedWidth="200px"
-						expandedLabel="Add New Interview"
-						icon="add"></app-expandbutton>
+					<app-expandbutton notExpandedWidth="50px" color="primary" expandedWidth="200px"
+						expandedLabel="Add New Interview" icon="add"></app-expandbutton>
 				</div>
-				<div
-					class="ms-2"
-					(click)="this.openSendMultiEmailDialog('100ms', '0ms')">
-					<app-expandbutton
-						color="accent"
-						notExpandedWidth="100px"
-						expandedWidth="300px"
-						expandedLabel="Mail To Multiple Candidates"
-						icon="multi-mail"></app-expandbutton>
+				<div class="ms-2" (click)="this.openSendMultiEmailDialog('100ms', '0ms')">
+					<app-expandbutton color="accent" notExpandedWidth="100px" expandedWidth="300px"
+						expandedLabel="Mail To Multiple Candidates" icon="multi-mail"></app-expandbutton>
 				</div>
-				<div
-					class="mt-2 d-flex ms-auto flex-row justify-content-center fs-3">
+				<button color="primary" class="ms-2" (click)="updateListInterviewStatus()"
+					[disabled]="this.listUpdateInterview.length == 0" mat-raised-button>Save
+					All Successfull
+					Candidate</button>
+				<div class="mt-2 d-flex ms-auto flex-row justify-content-center fs-3">
 					Result count: {{ this.fetchedInterviews?.length }}
 				</div>
 			</div>
-			<div
-				style="
+			<div style="
 					height: 600px;
 					overflow-y: scroll;
 					border: rgb(219, 219, 219) solid 1px;
@@ -211,72 +134,50 @@
 				@for (item of this.fetchedInterviews; track item) {
 				<div class="card p-4 m-3 shadow custom-seleted">
 					<div class="mb-3 d-flex flex-row">
-						<button
-							[disabled]="
+						<button [disabled]="
 								item.company_Status !==
 									this.interview_CompanyStatus.PENDING ||
 								item.recruiterId !== this.recruiter?.recruiterId
-							"
-							(click)="openEditFormDialog(item, '100ms', '0ms')"
-							style="width: fit-content"
-							mat-raised-button
+							" (click)="openEditFormDialog(item, '100ms', '0ms')" style="width: fit-content" mat-raised-button
 							color="primary">
 							<mat-icon>edit</mat-icon> Edit
 						</button>
 
-						<div
-							class="ms-2"
-							(click)="
+						<div class="ms-2" (click)="
 								this.openEmail(
 									item.application?.cv?.candidate?.user?.email
 								)
-							"
-							[style]="
+							" [style]="
 								item.company_Status !==
 									this.interview_CompanyStatus.PASSED ||
 								item.recruiterId !== this.recruiter?.recruiterId
 									? ' pointer-events: none;'
 									: ''
 							">
-							<app-expandbutton
-								notExpandLabel="Mail"
-								color="accent"
-								notExpandedWidth="100px"
-								expandedWidth="250px"
-								expandedLabel="Mail Result To Candidate"
-								icon="mail"
-								[disabled]="
+							<app-expandbutton notExpandLabel="Mail" color="accent" notExpandedWidth="100px"
+								expandedWidth="250px" expandedLabel="Mail Result To Candidate" icon="mail" [disabled]="
 									item.company_Status !==
 										this.interview_CompanyStatus.PASSED ||
 									item.recruiterId !==
 										this.recruiter?.recruiterId
 								"></app-expandbutton>
 						</div>
-						<div
-							class="ms-2"
-							(click)="
+						<div class="ms-2" (click)="
 								this.openConfirmDialog(
 									item.interviewId,
 									item.company_Status,
 									'100ms',
 									'0ms'
 								)
-							"
-							[style]="
+							" [style]="
 								item.company_Status !==
 									this.interview_CompanyStatus.PASSED ||
 								item.recruiterId !== this.recruiter?.recruiterId
 									? ' pointer-events: none;'
 									: ''
 							">
-							<app-expandbutton
-								notExpandLabel="Mailed"
-								color="primary"
-								notExpandedWidth="120px"
-								expandedWidth="200px"
-								expandedLabel="Note That Emailed"
-								icon="check"
-								[disabled]="
+							<app-expandbutton notExpandLabel="Mailed" color="primary" notExpandedWidth="120px"
+								expandedWidth="200px" expandedLabel="Note That Emailed" icon="check" [disabled]="
 									item.company_Status !==
 										this.interview_CompanyStatus.PASSED ||
 									item.recruiterId !==
@@ -298,22 +199,16 @@
 						<div class="py-1">
 							@switch (item.interviewType) { @case
 							(this.interview_Type.FACE2FACE) {
-							<div
-								class="p-2 rounded-2 bg-warning fw-bold"
-								style="width: fit-content">
+							<div class="p-2 rounded-2 bg-warning fw-bold" style="width: fit-content">
 								FACE TO FACE
 							</div>
 							} @case (this.interview_Type.ONLINE_GG_MEET) {
-							<div
-								class="p-2 rounded-2 fw-bold bg-success text-white"
-								style="width: fit-content">
+							<div class="p-2 rounded-2 fw-bold bg-success text-white" style="width: fit-content">
 								ONLINE GOOGLE MEET
 							</div>
 							} @default { not match } }
 						</div>
-						<div
-							class="mt-1 d-flex flex-row"
-							style="line-height: 20px; font-weight: 400">
+						<div class="mt-1 d-flex flex-row" style="line-height: 20px; font-weight: 400">
 							<div>
 								<i class="bi bi-building-fill"></i>
 								{{ item.addressOrStartURL }}
@@ -327,25 +222,23 @@
 					<div class="d-flex flex-row w-100">
 						<div class="fs-5 mt-4 w-100">
 							<div class="heading fs-5 d-flex flex-row">
-								<div
-									style="cursor: pointer"
-									[routerLink]="[
+								<div style="cursor: pointer" [routerLink]="[
 										'/positions/detail',
 										item.application?.position?.positionId
 									]">
 									{{
-										item.application?.position?.positionName
+									item.application?.position?.positionName
 									}}
 								</div>
 								<div class="ms-auto" style="font-size: 17px">
 									{{
-										item.application?.position?.startDate
-											| date : 'dd/MM/yyyy'
+									item.application?.position?.startDate
+									| date : 'dd/MM/yyyy'
 									}}
 									-
 									{{
-										item.application?.position?.endDate
-											| date : 'dd/MM/yyyy'
+									item.application?.position?.endDate
+									| date : 'dd/MM/yyyy'
 									}}
 								</div>
 							</div>
@@ -353,103 +246,75 @@
 					</div>
 					<div class="container">
 						<div class="row mt-3">
-							<div
-								class="col-sm d-flex flex-column align-items-center"
+							<div class="col-sm d-flex flex-column align-items-center"
 								style="width: 150px; height: fit-content">
 								<div>RECRUITER</div>
 								<div class="icon">
-									<img
-										style="border-radius: 50%"
-										width="100px"
-										height="100px"
-										src="{{
+									<img style="border-radius: 50%" width="100px" height="100px" src="{{
 											item.recruiter?.user?.imageURL
-										}}"
-										alt="{{
+										}}" alt="{{
 											item.recruiter?.user?.fullName
 										}} avatar" />
 								</div>
-								<div
-									style="
+								<div style="
 										text-align: center;
 										width: fit-content;
 									">
 									{{ item.recruiter?.user?.fullName }}
 								</div>
 							</div>
-							<div
-								class="col-sm d-flex flex-column align-items-center"
+							<div class="col-sm d-flex flex-column align-items-center"
 								style="width: 150px; height: fit-content">
 								<div>INTERVIEWER</div>
 								<div class="icon">
-									<img
-										style="border-radius: 50%"
-										width="100px"
-										height="100px"
-										src="{{
+									<img style="border-radius: 50%" width="100px" height="100px" src="{{
 											item.interviewer?.user?.imageURL
-										}}"
-										alt="{{
+										}}" alt="{{
 											item.interviewer?.user?.fullName
 										}} avatar" />
 								</div>
-								<div
-									style="
+								<div style="
 										text-align: center;
 										overflow-wrap: break-word;
 									">
 									{{ item.interviewer?.user?.fullName }}
 								</div>
-								<a
-									[href]="
+								<a [href]="
 										'https://mail.google.com/mail/?view=cm&fs=1&to=' +
 										item.interviewer?.user?.email
-									"
-									style="
+									" style="
 										text-align: center;
 										overflow-wrap: break-word;
 									">
-									{{ item.interviewer?.user?.email }}</a
-								>
+									{{ item.interviewer?.user?.email }}</a>
 							</div>
-							<div
-								class="col-sm d-flex flex-column align-items-center"
+							<div class="col-sm d-flex flex-column align-items-center"
 								style="width: 150px; height: fit-content">
 								<div>CANDIDATE</div>
 								<div class="icon">
-									<img
-										style="border-radius: 50%"
-										width="100px"
-										height="100px"
-										src="{{
+									<img style="border-radius: 50%" width="100px" height="100px" src="{{
 											item.application?.cv?.candidate
 												?.user?.imageURL
-										}}"
-										alt="{{
+										}}" alt="{{
 											item.application?.cv?.candidate
 												?.user?.fullName
 										}} avatar" />
 								</div>
-								<div
-									style="
+								<div style="
 										text-align: center;
 										overflow-wrap: break-word;
 									">
 									{{
-										item.application?.cv?.candidate?.user
-											?.fullName
+									item.application?.cv?.candidate?.user
+									?.fullName
 									}}
 								</div>
 
-								<a
-									href="{{ item.application?.cv?.cvPdf }}"
-									matTooltip="Candidate CV File"
-									style="
+								<a href="{{ item.application?.cv?.cvPdf }}" matTooltip="Candidate CV File" style="
 										text-align: center;
 										overflow-wrap: break-word;
 									">
-									{{ item.application?.cv?.cvName }}</a
-								>
+									{{ item.application?.cv?.cvName }}</a>
 							</div>
 						</div>
 					</div>
@@ -460,13 +325,15 @@
 							PENDING
 						</div>
 						} @case (this.interview_CompanyStatus.PASSED) {
-						<div
-							class="p-2 rounded-2 fw-bold bg-success text-white">
+						<div class="p-2 rounded-2 fw-bold bg-success text-white">
 							PASSED
 						</div>
+						} @case (this.interview_CompanyStatus.FINISHED) {
+						<div class="p-2 rounded-2 fw-bold bg-success text-white">
+							FINISHED
+						</div>
 						} @case (this.interview_CompanyStatus.PASSED_N_MAILED) {
-						<div
-							class="p-2 rounded-2 fw-bold bg-success text-white">
+						<div class="p-2 rounded-2 fw-bold bg-success text-white">
 							PASSED AND MAILED
 						</div>
 						} @case (this.interview_CompanyStatus.FAILED) {
@@ -480,6 +347,29 @@
 						<i class="bi bi-sticky-fill fs-5"></i> Notes:
 						{{ item.notes }}
 					</div>
+					}
+					@if (item.company_Status !== this.interview_CompanyStatus.PENDING) {
+					<mat-accordion>
+						<mat-expansion-panel>
+							<mat-expansion-panel-header>
+								<mat-panel-title>
+									Score
+								</mat-panel-title>
+
+							</mat-expansion-panel-header>
+							<p>
+								@for (item of item.rounds; track $index) {
+							<div class="m-2">
+								<div class="p-2"><b>Question:</b> {{item.question?.questionString}}</div>
+								<div class="p-2"><b>Score:</b> {{item.score}}</div>
+							</div>
+							}
+							</p>
+						</mat-expansion-panel>
+					</mat-accordion>
+					<mat-slide-toggle [disabled]="item.company_Status === this.interview_CompanyStatus.PASSED_N_MAILED"
+						class="my-2" [checked]="checked(item.company_Status)" (change)="onToggleChange($event, item)">
+						Passed</mat-slide-toggle>
 					}
 				</div>
 				}
