--- a/FRONTEND/src/app/module/interview/interview-start/left-table/left-table.component.html
+++ b/FRONTEND/src/app/module/interview/interview-start/left-table/left-table.component.html
@@ -13,7 +13,10 @@
 					<th mat-header-cell *matHeaderCellDef>
 						{{ column.header }}
 					</th>
-					<td mat-cell *matCellDef="let element">
+					<td
+						mat-cell
+						*matCellDef="let element"
+						[style.padding-bottom.px]="8">
 						<ng-container>
 							{{ element[column.field] }}
 						</ng-container>
