--- a/FRONTEND/src/app/module/cv/candidate-profile/candidate-profile.component.html
+++ b/FRONTEND/src/app/module/cv/candidate-profile/candidate-profile.component.html
@@ -44,6 +44,7 @@
 				<!-- GENERAL INFORMATION -->
 				<app-personal-detail
 					[candidate]="candidate"
+					[user]="user"
 					(refresh)="refreshPage()"></app-personal-detail>
 				<!-- EDUCATION -->
 				<!-- <app-candidate-education
